[package]
name = "umem-test"
version = "0.1.0"
authors = ["caoruijuan13@gmail.com <caoruijuan13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
#xsk-rs = "0.4"
xsk-rs = { path = "xsk-rs"}
tempfile = "3.3.0"
nix = "0.24.1"
rand = "0.8.5"
